<resources>
    <string name="app_name">ShoocalTask2</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="optional">Optional</string>
    <string name="check_the_box">Check The Box</string>
    <string name="none">None</string>
    <string name="checkbox">CheckBox</string>
    <string name="agree">Agree</string>
    <string name="task_2">Task 2</string>
    <string name="mother_s_name_optional">Mother\'s Name (Optional)</string>
    <string name="father_s_name_optional">Father\'s Name (Optional)</string>
</resources>